5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_2897.log
== TEST (2019-04-03 12:48:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(20)

# Impressao do dobro do numero
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:48:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(20)

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.291463
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:

-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:49:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o número:20"))

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o número:20"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o número:20"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.113321
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o n\xfamero:20"))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o número:20"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.0887139
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o n\xfamero:20"))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o número:20"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.120608
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o n\xfamero:20"))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:49:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o número:20"))

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o número:20"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o número:20"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.100827
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o n\xfamero:20"))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero:20"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.1285
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero:20"))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:49:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero:20"))

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o numero:20"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero:20")

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.135122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2897/main.py", line 4, in <module>
    num = int("Digite o numero:20")
ValueError: invalid literal for int() with base 10: 'Digite o numero:20'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:49:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero:20")

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int("Digite o numero:20")
ValueError: invalid literal for int() with base 10: 'Digite o numero:20'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:49:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero:2*10**2)

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.229533
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero:2*10**2)
                                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:49:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero:2*10**2)

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o numero:2*10**2)
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:50:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 5 "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.142147
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero: 5 "))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:50:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 5 "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.10859
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero: 5 "))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:50:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 5 "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.110692
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero: 5 "))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:50:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 5 "))

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o numero: 5 "))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:50:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 5)

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.115938
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero: 5)
                                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:50:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 5)

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o numero: 5)
                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:51:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 6)

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.171852
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero: 6)
                                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:51:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 6)

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 4
    num = int("Digite o numero: 6)
                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:51:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 6)

# Impressao do dobro do numero
print(2*6)
-- EXECUTION TIME:
0.217223
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int("Digite o numero: 6)
                                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:51:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("Digite o numero: 6)

# Impressao do dobro do numero
print(2*6)
-- ERROR:
File "XXXX", line 4
    num = int("Digite o numero: 6)
                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:51:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(2*6)
-- EXECUTION TIME:
0.192987
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:51:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(2*6)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:51:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(2*6)
-- EXECUTION TIME:
0.192677
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:51:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(2*6)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:52:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(12)
-- EXECUTION TIME:
0.210621
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:52:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(12)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:52:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(10)

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.13266
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
20
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:52:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(10)

# Impressao do dobro do numero
print(20)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:53:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input((10)

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.132401
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(20)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:53:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input((10))

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.146632
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(20)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:53:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input((10))

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:53:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(("Digite o numero:10))

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.211916
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input(("Digite o numero:10))
                                         ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:53:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(("Digite o numero:10))

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 4
    num = int(input(("Digite o numero:10))
                                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:53:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(("Digite o numero:10))

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.256379
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input(("Digite o numero:10))
                                         ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:54:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.141553
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(20)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:54:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:54:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.170474
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(20)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:54:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:54:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.13623
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(20)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:54:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:54:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- EXECUTION TIME:
0.202034
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(20)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:54:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:54:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:54:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10)

# Impressao do dobro do numero
print(20)
-- ERROR:
File "XXXX", line 7
    print(20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:54:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11)

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.156676
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 7
    print(22)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:55:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11)

# Impressao do dobro do numero
print(22)
-- ERROR:
File "XXXX", line 7
    print(22)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:55:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = 
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.148158
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:55:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = 
# Impressao do dobro do numero
print(22)
-- ERROR:
File "XXXX", line 4
    num = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:56:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.132177
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:56:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))
# Impressao do dobro do numero
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:56:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))
# Impressao do dobro do numero
print(22)

-- EXECUTION TIME:
0.137757
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:56:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))
# Impressao do dobro do numero
print(22)

-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:37:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())
# Impressao do dobro do numero
print(num*2)

-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:37:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())
# Impressao do dobro do numero
print(num*2)

-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:37:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())
# Impressao do dobro do numero
print(num*2)

-- EXECUTION TIME:
0.131187
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
